<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/reg_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/reg_fab"
        android:orientation="vertical"
        android:padding="@dimen/regular_offset">

        <TextView
            android:id="@+id/reg_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_title" />

        <TextView
            android:id="@+id/reg_subhead"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/reg_subhead" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/reg_text_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/reg_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_username" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_title" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/reg_text_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_hint_cost"
                android:inputType="number"/>

        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:text="Availability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:id="@+id/text_avail" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <EditText
                android:id="@+id/time_from"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:hint="00:00"
                android:inputType="time"
                android:layout_marginLeft="20dp" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" - "
                android:layout_gravity="center"
                android:layout_marginTop="5dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/time_to"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:hint="23:59"
                    android:inputType="time"/>
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
        <TextView
            android:text="Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:id="@+id/text_pick_location" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_pick"
                android:id="@+id/reg_pick_place"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_weight="1" />
        </LinearLayout>
        <TextView
            android:text="Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="10sp"
            android:id="@+id/reg_text_addr"
            android:visibility="gone"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</ScrollView>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/reg_fab"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/regular_offset"
            android:src="@drawable/ic_done" />



    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>